--- a/js/index.html
+++ b/js/index.html
@@ -5,6 +5,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+        <link rel="icon" href="img/favicon.ico" type ="image/x-icon">
+
         <title>
             あさひ小姐的私人Tab
         </title>
@@ -13,12 +15,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <ul class="nav nav-tabs">
-            <li><a href="" target= "_self">首页</a></li>
+            <li><a href="index.html" target= "_self">首页</a></li>
             <li><a href="#tab2" target= "_self" data-toggle=tab>个人网站</a>
                 <ul class="nav nav-tabs">
                     <li><a href="https://www.github.com/HakureiReimuChan" target= "_blank" data-toggle=tab>Github</a></li>
                     <li><a href="https://twitter.com/HakureiReimu___" target= "_blank" data-toggle=tab>Twitter</a></li>
-                    <li><a href="https:/space.bilibili.com/352627086" target= "_blank" data-toggle=tab>Bilibili</a></li>
+                    <li><a href="https://space.bilibili.com/352627086" target= "_blank" data-toggle=tab>Bilibili</a></li>
                     
                 </ul>
             </li>
@@ -34,14 +36,39 @@
     </head>
 
     <body background="img/background.jpg">
-        <div class="header">
 
-        </div>
         <form target="_self" method="get" action="https://www.bing.com/search">
 			<input type="text" placeholder="请问今天要搜点什么吗?" name="q" class="text"/>
 			<input type="submit" value="搜索" class="search">
 		</form>
 
-        <script src="" async defer></script>
+        <a href="https://www.youtube.com" class="buttonf" id="button1">
+            <button class="buttonp">
+                <img src="https://www.youtube.com/favicon.ico"  height="40" />
+                <div class="buttont">Youtube</div>
+            </button>     
+        </a>           
+       
+        <a href="https://www.bilibili.com" class="buttonxs" id="button1">
+            <button class="buttonp">
+                <img src="https://www.bilibili.com/favicon.ico"  height="40" />
+                <div class="buttont">Bilibili</div>
+            </button>     
+        </a>
+
+        <a href="https://www.teitter.com" class="buttonxs" id="button1">
+            <button class="buttonp">
+                <img src="https://abs.twimg.com/responsive-web/client-web/icon-ios.b1fc727a.png"  height="40" />
+                <div class="buttont">Twitter</div>
+            </button>     
+        </a>
+
+        <a href="https://www.github.com" class="buttonxs" id="button1">
+            <button class="buttonp">
+                <img src="https://www.github.com/favicon.ico"  height="40" />
+                <div class="buttont">Github</div>
+            </button>     
+        </a>
+
     </body>
 </html>
