--- a/js/index.html
+++ b/js/index.html
@@ -4,6 +4,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
 
         <link rel="icon" href="img/favicon.ico" type ="image/x-icon">
 
@@ -56,7 +59,7 @@
             </button>     
         </a>
 
-        <a href="https://www.teitter.com" class="buttonxs" id="button1">
+        <a href="https://www.twitter.com" class="buttonxs" id="button1">
             <button class="buttonp">
                 <img src="https://abs.twimg.com/responsive-web/client-web/icon-ios.b1fc727a.png"  height="40" />
                 <div class="buttont">Twitter</div>
