--- a/js/index.html
+++ b/js/index.html
@@ -23,10 +23,12 @@
                 <ul class="nav nav-tabs">
                     <li><a href="https://www.github.com/HakureiReimuChan" target= "_blank" data-toggle=tab>Github</a></li>
                     <li><a href="https://twitter.com/HakureiReimu___" target= "_blank" data-toggle=tab>Twitter</a></li>
-                    <li><a href="https://space.bilibili.com/352627086" target= "_blank" data-toggle=tab>Bilibili</a></li>
-                    
+                    <li><a href="https://space.bilibili.com/352627086" target= "_blank" data-toggle=tab>Bilibili</a></li>              
                 </ul>
             </li>
+            <li><a href="blog.html" target= "_self" data-toggle=tab>碎碎念</a>
+            <li><a href="music.html" target= "_self" data-toggle=tab>音乐</a>
+            <li><a href="img/background.jpg" download="" target= "_blank" data-toggle=tab>背景图片</a></li>
         </ul>
 
         <h1 class="h1">
@@ -35,7 +37,7 @@
         </h1>
 
         <link rel="stylesheet" href="css/1.css">
-        <script src="index.js"></script>
+        <script src="javascript/index.js"></script>
     </head>
 
     <body background="img/background.jpg">
