--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             </li>
             <li><a href="blog.html" target= "_self" data-toggle=tab>碎碎念</a>
             <li><a href="music.html" target= "_self" data-toggle=tab>音乐</a>
+            <li><a href="#tab2" target= "_self" data-toggle=tab>测试</a>
+                <ul class="nav nav-tabs">
+                    <li><a href="map.html" target= "_self" data-toggle=tab>地图</a></li>
+                    <li><a href="keyboard.svg" target= "_self" data-toggle=tab>键盘测试</a></li>
+                </ul>
+            </li>
             <li><a href="img/background.jpg" download="" target= "_blank" data-toggle=tab>背景图片</a></li>
         </ul>
 
