--- a/music.html
+++ b/music.html
@@ -26,6 +26,12 @@
             </li>
             <li><a href="blog.html" target= "_self" data-toggle=tab class="black">碎碎念</a>
             <li><a href="music.html" target= "_self" data-toggle=tab class="black">音乐</a>
+            <li><a href="#tab2" target= "_self" data-toggle=tab class="black">测试</a>
+                <ul class="nav nav-tabs">
+                    <li><a href="map.html" target= "_self" data-toggle=tab class="black">地图</a></li>
+                    <li><a href="keyboard.svg" target= "_self" data-toggle=tab class="black">键盘测试</a></li>
+                </ul>
+            </li>
             <li><a href="img/music_bcg.jpg" download="" target= "_blank" data-toggle=tab class="black">背景图片</a></li>  
         </ul>
 
