--- a/blog.html
+++ b/blog.html
@@ -26,6 +26,12 @@
             </li>
             <li><a href="blog.html" target= "_self" data-toggle=tab>碎碎念</a>
             <li><a href="music.html" target= "_self" data-toggle=tab>音乐</a>
+            <li><a href="#tab2" target= "_self" data-toggle=tab>测试</a>
+                <ul class="nav nav-tabs">
+                    <li><a href="map.html" target= "_self" data-toggle=tab>地图</a></li>
+                    <li><a href="keyboard.svg" target= "_self" data-toggle=tab>键盘测试</a></li>
+                </ul>
+            </li>
             <li><a href="img/blog_bcg.jpg" download="" target= "_blank" data-toggle=tab>背景图片</a></li>  
         </ul>
 
@@ -37,6 +43,9 @@
         <h2 class="h1">
 
         </h2>
+        <div class="keyboard" id="app-root">
+            
+        </div>
     
     </body>
 </html>
